--- a/src/main/resources/templates/carsList.html
+++ b/src/main/resources/templates/carsList.html
@@ -2,32 +2,34 @@
 <html lang="en"
       xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
-<head>
+<head th:include="navi">
     <meta charset="UTF-8"/>
     <title>Car list</title>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-<p></p>
-<div class="col-xs-3">
-    <table class="table">
-        <thead class="thead-dark">
-        <tr>Blossom</tr></thead>
-        <tbody class="tbody-light">
+
+    <table class="table table-striped">
+        <thead>
+        <td>CAr id:</td>
+        <td>Model:</td>
+        <td>Predkosc:</td>
+        <td>Nazwa silnika:</td>
+        </thead>
+        <tbody>
         <tr th:each="car : ${cars}">
             <td th:text="${car.id}"></td>
-            <td th:text="${bloss.model}"></td>
-            <td th:text="${bloss.velocity}"></td>
-        </tr></tbody>
-        <p></p>
-        <br>
+            <td th:text="${car.model}"></td>
+            <td th:text="${car.velocity}"></td>
+            <td th:text="${car.engine.name}"></td>
+        </tr>
+        </tbody>
     </table>
-    <a href="/engine/engineForm"><button type="button" class="btn btn-dark">Submit another engine</button></a>
-    <a href="/part/partForm"><button type="button" class="btn btn-dark">Submit another part</button></a>
-</div>
+    <!--<a href="/engine/engineForm"><button type="button" class="btn btn-dark">Submit another engine</button></a>-->
+    <!--<a href="/part/partForm"><button type="button" class="btn btn-dark">Submit another part</button></a>-->
 
 </body>
 </html>
