--- a/src/main/resources/templates/engineForm.html
+++ b/src/main/resources/templates/engineForm.html
@@ -25,10 +25,10 @@
 </head>
 <body>
 <div th:include="navi :: menu"></div>
-<datalist id="p">
-    <option th:each = "par : ${partsList}" th:value = "${par.id}"
-            th:label = "${par.name}" ></option>
-</datalist>
+<!--<datalist id="p">-->
+    <!--<option th:each = "par : ${partsList}" th:value = "${par.id}"-->
+            <!--th:label = "${par.name}" ></option>-->
+<!--</datalist>-->
 <datalist id="enginecat">
     <select>
         <option th:each="cat : ${T(pl.b2bnetwork.domain.EngineCat).values()}" th:value="${cat}"
@@ -38,30 +38,30 @@
 
 <h2 class="movieDet">Create new ENGINE:</h2>
 <form th:action="@{/engine/add}" th:object="${engine}" method="post">
-    <br/>
-    <br/>
-    <br/>
-    <div class="form-row">
-        <div class="form-group col-md-6">
-            <label for="inputAddress">Engine name:</label>
-            <input type="text" class="form-control" th:field="*{name}" placeholder="engine name"/>
-            <td th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></td>
-        </div>
-        <div class="form-group col-md-6">
-            <label for="inputPassword4">Year production</label>
-            <input type="text" class="form-control" th:field="*{yearProduction}" placeholder="2018"/>
-            <td th:if="${#fields.hasErrors('yearProduction')}" th:errors="*{yearProduction}"></td>
-        </div>
-        <div class="form-group col-md-4">
-            <label for="enginecat">EngineType:</label>
-            <input list="enginecat" class="form-control" th:field="*{engineCat}"/>
-            <td rowspan="6" th:if="${#fields.hasErrors('engineCat')}" th:errors="*{engineCat}"></td>
-            <br/>
-        </div>
-    </div>
+    <!--<br/>-->
+    <!--<br/>-->
+    <!--<br/>-->
+    <!--<div class="form-row">-->
+        <!--<div class="form-group col-md-6">-->
+            <!--<label for="inputAddress">Engine name:</label>-->
+            <!--<input type="text" class="form-control" th:field="*{name}" placeholder="engine name"/>-->
+            <!--<td th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></td>-->
+        <!--</div>-->
+        <!--<div class="form-group col-md-6">-->
+            <!--<label for="inputPassword4">Year production</label>-->
+            <!--<input type="text" class="form-control" th:field="*{yearProduction}" placeholder="2018"/>-->
+            <!--<td th:if="${#fields.hasErrors('yearProduction')}" th:errors="*{yearProduction}"></td>-->
+        <!--</div>-->
+        <!--<div class="form-group col-md-4">-->
+            <!--<label for="enginecat">EngineType:</label>-->
+            <!--<input list="enginecat" class="form-control" th:field="*{engineCat}"/>-->
+            <!--<td rowspan="6" th:if="${#fields.hasErrors('engineCat')}" th:errors="*{engineCat}"></td>-->
+            <!--<br/>-->
+        <!--</div>-->
+    <!--</div>-->
 
-    <br />
-    <br />
+    <!--<br />-->
+    <!--<br />-->
     <table>
         <th:block th:each="part: ${partsList}">
             <input type="checkbox" name="id" th:value="${part.id}"/>
@@ -71,36 +71,38 @@
     <button type="submit" class="btn-success btn-lg">Submit</button>
     <button type="reset" class="btn-danger btn-lg">Reset</button>
 </form>
-<br />
-<br />
-<br />
-<br />
-<br />
-<div class="container">
-    <h2>Sources :)</h2>
-    <div class="row">
-        <div class="col-md-4">
-            <div class="thumbnail">
-                <a href="https://www.goshico.com/allegro/engine.jpg" target="_blank">
-                    <img src="https://www.goshico.com/allegro/engine.jpg" alt="Lights" style="width:100%"/>
-                </a>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="thumbnail">
-                <a href="https://www.goshico.com/allegro/parts.jpg" target="_blank">
-                    <img src="https://www.goshico.com/allegro/parts.jpg" alt="Lights" style="width:100%"/>
-                </a>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="thumbnail">
-                <a href="https://www.goshico.com/allegro/car.jpg" target="_blank">
-                    <img src="https://www.goshico.com/allegro/car.jpg" alt="Lights" style="width:100%"/>
-                </a>
-            </div>
-        </div>
-    </div>
-</div>
+
+
+<!--<br />-->
+<!--<br />-->
+<!--<br />-->
+<!--<br />-->
+<!--<br />-->
+<!--<div class="container">-->
+    <!--<h2>Sources :)</h2>-->
+    <!--<div class="row">-->
+        <!--<div class="col-md-4">-->
+            <!--<div class="thumbnail">-->
+                <!--<a href="https://www.goshico.com/allegro/engine.jpg" target="_blank">-->
+                    <!--<img src="https://www.goshico.com/allegro/engine.jpg" alt="Lights" style="width:100%"/>-->
+                <!--</a>-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="col-md-4">-->
+            <!--<div class="thumbnail">-->
+                <!--<a href="https://www.goshico.com/allegro/parts.jpg" target="_blank">-->
+                    <!--<img src="https://www.goshico.com/allegro/parts.jpg" alt="Lights" style="width:100%"/>-->
+                <!--</a>-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="col-md-4">-->
+            <!--<div class="thumbnail">-->
+                <!--<a href="https://www.goshico.com/allegro/car.jpg" target="_blank">-->
+                    <!--<img src="https://www.goshico.com/allegro/car.jpg" alt="Lights" style="width:100%"/>-->
+                <!--</a>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
 </body>
 </html>
