--- a/src/main/resources/templates/carForm.html
+++ b/src/main/resources/templates/carForm.html
@@ -7,7 +7,7 @@
 <body>
 
 <datalist>
-    <option th:each = "engine : ${enigneList}" th:value = "${engine.id}"
+    <option th:each = "engine : ${engineList}" th:value = "${engine.id}"
             th:label = "${engine.name}" ></option>
 </datalist>
 
