--- a/src/main/resources/templates/partsList.html
+++ b/src/main/resources/templates/partsList.html
@@ -23,6 +23,7 @@
     </style>
 </head>
 <body bgcolor="black">
+<!--<form th:action="@{/part/delete}" th:object="${part}" method="delete">-->
 <div th:include="navi :: menu"></div>
 <h2 class="movieDet"> Parts list:</h2>
 <!--<p>The .table-striped class adds zebra-stripes to a table:</p>-->
@@ -38,6 +39,13 @@
     <tr th:each="part:${parts}">
         <td th:text="${part.id}"></td>
         <td th:text="${part.name}"></td>
+        <td>
+            <form th:action="@{delete/{id}(id=${part.id})}" th:object="${part}" method="post">
+                <!--<input type="hidden" th:field="${part}">Delete</input>-->
+                <button type="delete" th:field="${part}" class="btn-success btn-lg">Delete</button>
+
+            </form>
+        </td>
         <!--<td>-->
             <!--<a th:href="@{/engine/add?id={id}(id=${part.id})}"-->
                <!--role="button" class="btn btn-success">-->
@@ -48,6 +56,7 @@
     </tr>
     </tbody>
 </table>
+<!--</form>-->
 </body>
 <div class="container">
     <h2>Sources :)</h2>
