--- a/src/main/resources/templates/enginesList.html
+++ b/src/main/resources/templates/enginesList.html
@@ -43,10 +43,12 @@
         <td th:text="${eng.name}"></td>
         <td th:text="${eng.yearProduction}"></td>
         <td th:text="${eng.engineCat}"></td>
-        <!--<td th:text="${eng.parts.get(0).name}"></td>-->
-
         <span th:if="${!eng.parts.empty}"><td th:text="${eng.parts.get(0).name}"></td></span>
-        <!--<span th:if="${error != null and error.summary != null}"><span th:text="${error.summary}">error summary</span></span>-->
+        <td>
+            <form th:action="@{delete/{id}(id=${eng.id})}" method="post">
+            <button type="delete" th:field="${eng}">Delete</button>
+            </form>
+        </td>
 
 
     </tr>
